icon design, added background-image

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-antenna">
+                  </use>
+                </svg>
+              </div>
               <h3 class="features-title">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -66,6 +72,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/sprite.svg#icon-clock">
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="features-title">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -73,6 +86,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/sprite.svg#icon-diagram">
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="features-title">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -80,6 +100,13 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon-wrap">
+                <svg width="64" height="64">
+                  <use href="./images/sprite.svg#icon-astronaut">
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="features-title">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -136,6 +163,36 @@
               <div class="card-desc">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-media-list list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use> social-media-icon
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -148,6 +205,36 @@
               <div class="card-desc">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                 <ul class="social-media-list list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use> social-media-icon
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -160,6 +247,36 @@
               <div class="card-desc">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                 <ul class="social-media-list list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use> social-media-icon
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -172,22 +289,136 @@
               <div class="card-desc">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                 <ul class="social-media-list list">
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use> social-media-icon
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link" href="">
+                      <svg class="social-media-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+<!-- Customers -->
+      <section class="customers-section container">
+        <h2 class="section-title">Customers</h2>
+        <ul class="customers-list list">
+          <li class="customers-item">
+            <a href="" class="customers-link">
+              <svg class="customers-logo">
+                <use href="./images/sprite.svg#icon-group"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link">
+              <svg class="customers-logo">
+            <use href="./images/sprite.svg#icon-group-1"></use></svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link">
+              <svg class="customers-logo">
+                <use href="./images/sprite.svg#icon-group-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link">
+              <svg class="customers-logo">
+                <use href="./images/sprite.svg#icon-group-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link">
+              <svg class="customers-logo">
+                <use href="./images/sprite.svg#icon-group-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-item">
+            <a href="" class="customers-link">
+              <svg class="customers-logo">
+                <use href="./images/sprite.svg#icon-group-5"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
     <footer class="footer-section">
-      <div class="container">
-        <a class="logo link" href="./index.html"
+      <div class="container footer-container">
+        <div class="footer-left-side">
+ <a class="logo link" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing &amp; growth solutions.
         </p>
+        </div>
+       
+      <div class="footer-social-media-wrap">
+                <p class="media-text">Social media</p>
+         <ul class="social-media-list list">
+                  <li class="social-media-item">
+                    <a class="social-media-link footer-media-link" href="">
+                      <svg class="social-media-icon footer-media-icon">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link footer-media-link" href="">
+                      <svg class="social-media-icon footer-media-icon">
+                        <use href="./images/sprite.svg#icon-twitter"></use> social-media-icon
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link footer-media-link" href="">
+                      <svg class="social-media-icon footer-media-icon">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a class="social-media-link footer-media-link" href="">
+                      <svg class="social-media-icon footer-media-icon">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+      </div>
+
       </div>
     </footer>
   </body>
