--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         </ul>
         <ul class="portfolio-list list">
           <li class="portfolio-item">
-            <a class="link" href="">
+            <a class="portfolio-link link" href="">
               <img
                 src="./images/portfolio/banking.jpg"
                 alt="Banking App Interface Concept"
@@ -77,7 +77,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/cashless.jpg"
                 alt="Cashless Payment"
@@ -90,7 +90,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/meditation.jpg"
                 alt="Meditaion App"
@@ -103,7 +103,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/taxi.jpg"
                 alt="Taxi Service"
@@ -116,7 +116,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/illustratios.jpg"
                 alt="Screen Illustrations"
@@ -129,7 +129,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/courses.jpg"
                 alt="Online Courses"
@@ -142,7 +142,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/instagram.jpg"
                 alt="Instagram Stories Concept"
@@ -155,7 +155,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/food.jpg"
                 alt="Organic Food"
@@ -168,7 +168,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a class="link" href=""
+            <a class="portfolio-link link" href=""
               ><img
                 src="./images/portfolio/coffee.jpg"
                 alt="Fresh Coffee"
