--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-      <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-  />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -48,152 +48,193 @@
     <main>
       <section class="portfolio-section">
         <div class="container">
-        <h1 class="visually-hidden">Portfolio</h1>
-        <ul class="filters-list list">
-          <li><button class="filters-btn btn" type="button">All</button></li>
-          <li>
-            <button class="filters-btn btn" type="button">Web Site</button>
-          </li>
-          <li><button class="filters-btn btn" type="button">App</button></li>
-          <li><button class="filters-btn btn" type="button">Design</button></li>
-          <li>
-            <button class="filters-btn btn" type="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href="">
-              <img
-                src="./images/portfolio/banking.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">
-                  Banking App Interface Concept
-                </h2>
-                <p class="portfolio-text link">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Cashless Payment</h2>
-                <p class="portfolio-text link">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/meditation.jpg"
-                alt="Meditaion App"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Meditaion App</h2>
-                <p class="portfolio-text link">App</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Taxi Service</h2>
-                <p class="portfolio-text link">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/illustratios.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Screen Illustrations</h2>
-                <p class="portfolio-text link">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Online Courses</h2>
-                <p class="portfolio-text link">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/instagram.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Instagram Stories Concept</h2>
-                <p class="portfolio-text link">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/food.jpg"
-                alt="Organic Food"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title link">Organic Food</h2>
-                <p class="portfolio-text link">Web Site</p>
-              </div>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="portfolio-link link" href=""
-              ><img
-                src="./images/portfolio/coffee.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
-              <div class="portfolio-card-desc">
-                <h2 class="portfolio-title">Fresh Coffee</h2>
-                <p class="portfolio-text">Web Site</p>
-              </div>
-            </a>
-          </li>
-        </ul>
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="filters-list list">
+            <li><button class="filters-btn btn" type="button">All</button></li>
+            <li>
+              <button class="filters-btn btn" type="button">Web Site</button>
+            </li>
+            <li><button class="filters-btn btn" type="button">App</button></li>
+            <li>
+              <button class="filters-btn btn" type="button">Design</button>
+            </li>
+            <li>
+              <button class="filters-btn btn" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href="">
+                <img
+                  src="./images/portfolio/banking.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="portfolio-text link">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">Cashless Payment</h2>
+                  <p class="portfolio-text link">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/meditation.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">Meditaion App</h2>
+                  <p class="portfolio-text link">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">Taxi Service</h2>
+                  <p class="portfolio-text link">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/illustratios.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">Screen Illustrations</h2>
+                  <p class="portfolio-text link">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">Online Courses</h2>
+                  <p class="portfolio-text link">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/instagram.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="portfolio-text link">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/food.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title link">Organic Food</h2>
+                  <p class="portfolio-text link">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  src="./images/portfolio/coffee.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="portfolio-card-desc">
+                  <h2 class="portfolio-title">Fresh Coffee</h2>
+                  <p class="portfolio-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer-section">
-      <div class="container">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing &amp; growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-left-side">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &amp; growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-social-media-wrap">
+          <p class="media-text">Social media</p>
+          <ul class="social-media-list list">
+            <li class="social-media-item">
+              <a class="social-media-link footer-media-link" href="">
+                <svg class="social-media-icon footer-media-icon">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link footer-media-link" href="">
+                <svg class="social-media-icon footer-media-icon">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  social-media-icon
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link footer-media-link" href="">
+                <svg class="social-media-icon footer-media-icon">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link footer-media-link" href="">
+                <svg class="social-media-icon footer-media-icon">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
