--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   </head>
   <body>
     <!-- Header -->
-        <header class="page-header container">
-      <nav class="nav-list">
+        <header class="page-header">
+          <div class="header-container container">      
+            <nav class="nav-list">
         <a class="logo link" href="./index.html"
           >Web<span class="header-logo">Studio</span></a
         >
@@ -43,7 +44,8 @@
             >
           </li>
         </ul>
-      </address>
+      </address></div>
+
     </header>
     <main>
       <!-- Hero-section -->
