--- a/portfolio.html
+++ b/portfolio.html
@@ -17,33 +17,35 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="page-header container">
-      <nav class="nav-list">
-        <a class="logo link" href="./index.html"
-          >Web<span class="header-logo">Studio</span></a
-        >
-        <ul class="menu list">
-          <li><a class="nav-link link" href="./index.html">Studio</a></li>
-          <li>
-            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li><a class="nav-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="address-list list">
-          <li class="address-item">
-            <a class="address-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="address-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="header-container container">
+        <nav class="nav-list">
+          <a class="logo link" href="./index.html"
+            >Web<span class="header-logo">Studio</span></a
+          >
+          <ul class="menu list">
+            <li><a class="nav-link link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="nav-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="address-list list">
+            <li class="address-item">
+              <a class="address-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="portfolio-section">
